# palaco-genesis

./: CITADEL  CONTRIBUTING.md  PALACO Foundation  PALACO core  PALACO ontwikkeling  README.md  v2.0.0 Sublime
crates/palaco-eventbus/: Cargo.toml
crates/palaco-eventbus/src/: dispatcher.rs  events.rs  lib.rs
crates/palaco-gateway/: Cargo.toml
crates/palaco-gateway/src/: http.rs  lib.rs  protocols.rs  routing.rs
crates/palaco-kernel/: Cargo.toml
crates/palaco-kernel/src/: error.rs  invariants.rs  lib.rs  types.rs
crates/palaco-knowledge/: Cargo.toml
crates/palaco-knowledge/src/: lib.rs  metadata.rs  models.rs  semantics.rs
crates/palaco-operations/: Cargo.toml
crates/palaco-operations/src/: lib.rs  logging.rs  metrics.rs  tracing.rs
crates/palaco-plugin/: Cargo.toml
crates/palaco-plugin/src/: lib.rs  lifecycle.rs  loader.rs  traits.rs
crates/palaco-runtime/: Cargo.toml
crates/palaco-runtime/src/: lib.rs  lifecycle.rs  orchestration.rs  state.rs
crates/palaco-security/: Cargo.toml
crates/palaco-security/src/: access_control.rs  audit.rs  lib.rs  policies.rs
crates/palaco-storage/: Cargo.toml
crates/palaco-storage/src/: lib.rs  persistence.rs  schema.rs  transactions.rs
docs/: PALACO-Constitution.md  PAS-001.md  PIS-001.md  POC-Traceability.md  POS-001.md  PVC-001-PALACO-Validation-Standard.md
docs/adr/: INDEX.md  PROJECT status
scripts/: install-tools.sh  validate-all.sh  validate-gate-0.sh  validate-gate-1.sh  validate-gate-2.sh  validate-gate-7.sh  validate-gate-8.sh  validate-gate-9.sh
