[package]
name = "palaco-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PALACO Plugin: Extensibility framework and plugin system"

[dependencies]
palaco-kernel = { path = "../palaco-kernel" }
palaco-eventbus = { path = "../palaco-eventbus" }

[dev-dependencies]
